packages/astro/e2e/fixtures/errors/src/pages/astro-client-media-error.astro
---
import SvelteDirectiveError from '../components/svelte/SvelteDirectiveError.svelte';
---

<div>
  <SvelteDirectiveError client:media />
</div>
